# ca-biositing

./: .codespellrc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  ERD_VIEW.md  GEOSPATIAL_COMPLETION.md  GEOSPATIAL_MODULE_SUMMARY.md  GEOSPATIAL_QUICK_START.md  LICENSE  NAMESPACE_MIGRATION_GUIDE.md  PR_qualitative_plus.md  README.md  SECURITY.md  Test_google_colab_github.ipynb  USDA_ETL_HANDOFF.md  alembic.ini  analyze_transform_fix.py  api_commodities.txt  census.survey.mmd  check_column_type.py  check_commodities.py  config.py  datamodels  debug_api_names.py  debug_api_names_v2.py  diagnose_mv.py  docker-compose.yml  explain_transform.py  generate_migration.py  mkdocs.yml  pipeline  pixi.toml  pyproject.toml  readthedocs.yaml  (+16 more)
src/ca_biositing/datamodels/: AGENTS.md  README.md  config.py  database.py  generate_sqla.py  pyproject.toml
src/ca_biositing/datamodels/ca_biositing/datamodels/: __init__.py  biomass.py  config.py  data_and_references.py  data_portal_views.py  database.py  organizations.py  specific_aalysis_results.py  views.py
src/ca_biositing/datamodels/ca_biositing/datamodels/data_portal_views/: __init__.py  common.py  mv_billion_ton_county_production.py  mv_biomass_availability.py  mv_biomass_composition.py  mv_biomass_county_production.py  mv_biomass_end_uses.py  mv_biomass_fermentation.py  mv_biomass_gasification.py  mv_biomass_pricing.py  mv_biomass_sample_stats.py  mv_biomass_search.py  mv_biomass_volume_estimate.py  mv_usda_county_production.py  mv_volume_estimation.py
src/ca_biositing/datamodels/ca_biositing/datamodels/linkml/: ca_biositing.yaml
src/ca_biositing/datamodels/ca_biositing/datamodels/linkml/modules/: aim1_records.yaml  aim2_records.yaml  analysis.yaml  analysis_records.yaml  core.yaml  data_sources_metadata.yaml  experiment_equipment.yaml  experiments.yaml  (+20 more)
src/ca_biositing/datamodels/ca_biositing/datamodels/models/: __init__.py  base.py
src/ca_biositing/datamodels/ca_biositing/datamodels/schemas/: __init__.py  linkml_sqla_generation.md  template.yaml
src/ca_biositing/datamodels/ca_biositing/datamodels/sql_schemas/: main.sql  schemas.sql
src/ca_biositing/datamodels/tests/: README.md  conftest.py  test_biomass.py  test_geographic_locations.py  test_package.py
src/ca_biositing/datamodels/utils/: database_joins.ipynb  generate_sqla.py  generate_test_sqla.py  orchestrate_schema_update.py  query_landiq_observation.py  reorder_sql_main.py
src/ca_biositing/pipeline/: .env.example  AGENTS.md  ETL_WORKFLOW.md  README.md  database.py  pyproject.toml
src/ca_biositing/pipeline/ca_biositing/pipeline/: __init__.py
src/ca_biositing/pipeline/ca_biositing/pipeline/etl/: __init__.py
src/ca_biositing/pipeline/ca_biositing/pipeline/flows/: aim2_bioconversion.py  analysis_records.py  analysis_type.py  billion_ton_etl.py  county_ag_report_etl.py  field_sample_etl.py  landiq_etl.py  prepared_sample_etl.py  primary_ag_product.py  primary_product.py  qualitative.py  residue_factors_flow.py  resource_information.py  samples_etl.py  static_resource_info.py  thermochem_etl.py  usda_etl.py
src/ca_biositing/pipeline/ca_biositing/pipeline/temp_external_datasets/: Biodiesel_Plants.csv  CA_proc_points.csv  US_Freight_Terminals.geojson
src/ca_biositing/pipeline/ca_biositing/pipeline/utils/: __init__.py  clear_alembic.py  commodity_mappings.csv  county_ag_report_inspector.py  database_interaction.ipynb  dev_test.ipynb  engine.py  etl_class_example.ipynb  etl_notebook.ipynb  external_etl_notebook.ipynb  fetch_mapped_commodities.py  gdrive_to_pandas.py  geo_utils.py  geopandas_setup_instructions.md  geopandas_shapefile_extraction.ipynb  geospatial_cleaning.ipynb  gsheet_extraction_notebook.ipynb  gsheet_inventory.ipynb  gsheet_sheets.py  gsheet_to_pandas.py  import_helper.py  import_test.ipynb  interactive_commodity_mapper.py  lineage.py  lookup_utils.py  name_id_swap.py  notebook_import_guide.md  populate_api_names.py  register_pixi_kernel.sh  reviewed_api_mappings.py  run_pipeline.py  sampling_data_notebook.ipynb  seed_biomass.sql  seed_commodity_mappings.py  template_comprehensive_commodity_mapping.py  test_lookup_utils.ipynb  universal_import_helper.py  usda_nass_to_pandas.py
src/ca_biositing/pipeline/docs/: ALEMBIC_WORKFLOW.md  DOCKER_WORKFLOW.md  GCP_SETUP.md  STYLE_GUIDE.md
src/ca_biositing/pipeline/docs/dev-references/: get_sheet_names.ipynb  gsheet_inventory.ipynb  test_lookup_utils.ipynb
src/ca_biositing/pipeline/docs/tutorials/: cleaning_functions.ipynb  etl_class_example.ipynb  etl_notebook.ipynb  external_etl_notebook.ipynb  geopandas_shapefile_extraction.ipynb  geospatial_cleaning.ipynb  gsheet_extraction_notebook.ipynb
src/ca_biositing/pipeline/scripts/USDA/: all_checks.sql  debug_api_names_v2.py  seed_target_counties.sql  usda_availability.py  usda_comprehensive.py
src/ca_biositing/pipeline/tests/: README.md  __init__.py  conftest.py  database_diagnostics.py  test_billion_ton_etl.py  test_etl_extract.py  test_fermentation_etl.py  test_field_sample_load.py  test_field_sample_transform.py  test_flows.py  test_landiq_load.py  test_landiq_transform.py  test_location_address_load.py  test_location_address_transform.py  test_lookup_utils.py  test_new_analysis_etl.py  test_package.py  test_prepared_sample_load.py  test_prepared_sample_transform.py  test_pretreatment_etl.py  test_resource_load.py  test_resource_transform.py  test_seeding.py  test_static_resource_info_extract.py  test_static_resource_info_load.py  test_static_resource_info_transform.py  test_thermochem_extract.py  test_thermochem_transform.py
src/ca_biositing/pipeline/tests/USDA/: README.md  bootstrap_usda_commodities.sql  check_commodity_status.sql  check_etl_summary.sql  debug_missing_commodities.sql  manual_test_seeding.py  seed_target_counties.sql  test_api_names.py  test_seeding.py  test_usda_api_direct.py  test_usda_availability.py  test_usda_comprehensive.py  validate_usda_load.sql  view_commodity_mappings.sql
src/ca_biositing/pipeline/utils/: reset_db.sh  run_pipeline.py
(+990 files in other folders)
