[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ca-biositing-datamodels"
version = "0.1.0"
description = "Data models for CA Biositing project"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "../../../LICENSE"}
authors = [
    {name = "SSEC Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "sqlmodel>=0.0.19,<0.1",
    "alembic>=1.13.2,<2",
    "psycopg2>=2.9.9,<3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/uw-ssec/ca-biositing"
Repository = "https://github.com/uw-ssec/ca-biositing.git"
Issues = "https://github.com/uw-ssec/ca-biositing/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ca_biositing/datamodels"]
