[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ca-biositing-datamodels"
description = "Data models for CA Biositing project"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "SSEC Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "sqlmodel>=0.0.19,<0.1",
    "alembic>=1.13.2,<2",
    "psycopg2-binary>=2.9.6,<3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "geoalchemy2>=0.15.0,<0.16",
]

[project.urls]
Homepage = "https://github.com/sustainability-software-lab/ca-biositing"
Repository = "https://github.com/sustainability-software-lab/ca-biositing.git"
Issues = "https://github.com/sustainability-software-lab/ca-biositing/issues"

[tool.hatch.build.targets.wheel]
only-include = ["ca_biositing"]
exclude = [
    "**/.ipynb_checkpoints",
    "**/* copy.py",
]

[tool.hatch.version]
source = "vcs"
raw-options.root = "../../.."
raw-options.local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "ca_biositing/datamodels/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "**/.ipynb_checkpoints",
    "**/* copy.py",
]
