[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ca-biositing-pipeline"
description = "ETL pipeline for CA Biositing project"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "SSEC Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "ca-biositing-datamodels==0.1.0",
    "pandas>=2.2.0,<3",
    "asyncpg",
    "prefect",
    "gspread",
    "gspread-dataframe",
    "pyjanitor",
    "google-auth-oauthlib",
    "python-dotenv>=1.0.1,<2",
    "geopandas",
    "pyogrio",
]

[project.urls]
Homepage = "https://github.com/uw-ssec/ca-biositing"
Repository = "https://github.com/uw-ssec/ca-biositing.git"
Issues = "https://github.com/uw-ssec/ca-biositing/issues"

[tool.hatch.build.targets.wheel]
only-include = ["ca_biositing"]

[tool.hatch.version]
path = "ca_biositing/pipeline/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests/"]
