[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ca-biositing-pipeline"
description = "ETL pipeline for CA Biositing project"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "SSEC Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "ca-biositing-datamodels",
    "pandas>=2.2.0,<3",
    "asyncpg",
    "prefect>=3,<4",
    "gspread",
    "gspread-dataframe",
    "pyjanitor>=0.31.0,<0.32",
    "google-auth-oauthlib",
    "python-dotenv>=1.0.1,<2",
    "geopandas",
    "pyogrio",
]

[project.urls]
Homepage = "https://github.com/sustainability-software-lab/ca-biositing"
Repository = "https://github.com/sustainability-software-lab/ca-biositing.git"
Issues = "https://github.com/sustainability-software-lab/ca-biositing/issues"

[tool.hatch.build.targets.wheel]
only-include = ["ca_biositing"]
exclude = [
    "**/.ipynb_checkpoints",
    "**/* copy.py",
]

[tool.hatch.version]
source = "vcs"
raw-options.root = "../../.."
raw-options.local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "ca_biositing/pipeline/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "**/.ipynb_checkpoints",
    "**/* copy.py",
]
